fix dark scrollbar in firefox

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -35,10 +35,10 @@ $dark-scrollbar-track: scale-color($dark-backdrop-0, $lightness: 5%);
 * {
   scrollbar-width: thin;
   scrollbar-color: $scrollbar-thumb $scrollbar-track;
+}
 
-  .dark & {
-    scrollbar-color: $dark-scrollbar-thumb $dark-scrollbar-track;
-  }
+.dark, .dark * {
+  scrollbar-color: $dark-scrollbar-thumb $dark-scrollbar-track;
 }
 
 ::-webkit-scrollbar {
